# resource_loading_time_script

./: loading_time_test.py  pyproject.toml
