[project]
name = "browser-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas",email = "lukas.mueller@ampad.de"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
